--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
       </button>
       <div class="collapse navbar-collapse" id="navMain">
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="/about/">À propos</a></li>
-          <li class="nav-item"><a class="nav-link" href="/skills/">Compétences</a></li>
-          <li class="nav-item"><a class="nav-link" href="/cv/">CV</a></li>
-          <li class="nav-item"><a class="nav-link" href="/projets/">Projets</a></li>
+          <li class="nav-item"><a class="nav-link" href="/portfolio-amour/about/">À propos</a></li>
+          <li class="nav-item"><a class="nav-link" href="/portfolio-amour/skills/">Compétences</a></li>
+          <li class="nav-item"><a class="nav-link" href="/portfolio-amour/cv/">CV</a></li>
+          <li class="nav-item"><a class="nav-link" href="/portfolio-amour/projets/">Projets</a></li>
         </ul>
       </div>
     </div>
@@ -32,7 +32,7 @@
     <div class="animate__animated animate__fadeInDown">
       <h1 class="display-4">Bienvenue sur mon Portfolio</h1>
       <p class="lead">Architecte logiciel & Développeur Web/Mobile</p>
-      <a href="/about/" class="btn btn-outline-light btn-lg mt-3 animate__animated animate__fadeInUp">Découvrir</a>
+      <a href="/portfolio-amour/about/" class="btn btn-outline-light btn-lg mt-3 animate__animated animate__fadeInUp">Découvrir</a>
     </div>
   </header>
 
