--- a/skills/index.html
+++ b/skills/index.html
@@ -15,10 +15,10 @@
       <a class="navbar-brand" href="/">Amour Govoetchan</a>
       <div class="collapse navbar-collapse" id="navMain">
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="/about/">À propos</a></li>
-          <li class="nav-item"><a class="nav-link" href="/skills/">Compétences</a></li>
-          <li class="nav-item"><a class="nav-link" href="/cv/">CV</a></li>
-          <li class="nav-item"><a class="nav-link" href="/projets/">Projets</a></li>
+          <li class="nav-item"><a class="nav-link" href="/portfolio-amour/about/">À propos</a></li>
+          <li class="nav-item"><a class="nav-link" href="/portfolio-amour/skills/">Compétences</a></li>
+          <li class="nav-item"><a class="nav-link" href="/portfolio-amour/cv/">CV</a></li>
+          <li class="nav-item"><a class="nav-link" href="/portfolio-amour/projets/">Projets</a></li>
         </ul>
       </div>
     </div>
