--- a/about/index.html
+++ b/about/index.html
@@ -4,36 +4,79 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>À propos - Amour Govoetchan</title>
+  <!-- Bootstrap & Animate.css -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-  <link href="/assets/css/style.css" rel="stylesheet">
+  <link href="/portfolio-amour/assets/css/style.css" rel="stylesheet">
 </head>
 <body>
   <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top shadow">
     <div class="container">
-      <a class="navbar-brand" href="/">Amour Govoetchan</a>
+      <a class="navbar-brand fw-bold" href="/portfolio-amour/">Amour Govoetchan</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navMain">
+        <span class="navbar-toggler-icon"></span>
+      </button>
       <div class="collapse navbar-collapse" id="navMain">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item"><a class="nav-link" href="/portfolio-amour/about/">À propos</a></li>
           <li class="nav-item"><a class="nav-link" href="/portfolio-amour/skills/">Compétences</a></li>
           <li class="nav-item"><a class="nav-link" href="/portfolio-amour/cv/">CV</a></li>
-          <li class="nav-item"><a class="nav-link" href="/portfolio-amour/projets/">Projets</a></li>
+          <li class="nav-item"><a class="nav-link" href="/portfolio-amour/projects/">Projets</a></li>
         </ul>
       </div>
     </div>
   </nav>
 
+  <!-- Hero -->
+  <header class="bg-dark text-white text-center py-5 mt-5">
+    <div class="container animate__animated animate__fadeInDown">
+      <h1 class="display-4 fw-bold">À propos de moi</h1>
+      <p class="lead">Développeur Web & Mobile | Marketing Digital</p>
+    </div>
+  </header>
+
   <!-- Content -->
-  <main class="container py-5 mt-5">
-    <h1 class="animate__animated animate__fadeInDown mb-4">À propos de moi</h1>
-    <div class="row align-items-center">
+  <main class="container py-5">
+    <div class="row align-items-center mb-5">
       <div class="col-md-4 text-center animate__animated animate__zoomIn">
-        <img src="/assets/images/me.jpg" alt="Photo de Amour Govoetchan" class="img-fluid rounded shadow-sm" style="max-width:250px;">
+        <img src="/portfolio-amour/assets/images/me.jpg" alt="Photo de Amour Govoetchan" class="img-fluid rounded shadow-lg" style="max-width:250px;">
       </div>
       <div class="col-md-8 animate__animated animate__fadeInRight">
-        <p>Je suis <strong>Amour Govoetchan</strong>, architecte logiciel et développeur web & mobile passionné par la technologie et l’innovation.</p>
-        <p>Ma philosophie : <em>Comprendre avant de coder, privilégier la simplicité et la qualité, et concevoir pour l’expérience utilisateur.</em></p>
+        <p>
+          Je suis <strong>Amour Govoetchan</strong>, architecte logiciel et développeur passionné par la création de solutions numériques modernes et élégantes. 
+          Mon expertise couvre le <strong>développement web & mobile</strong> (sites responsives, applications performantes, intégration UI/UX) ainsi que le 
+          <strong>marketing digital</strong> (community management, stratégie réseaux sociaux, contenus engageants et visuels attractifs).
+        </p>
+        <p>
+          Ce double savoir-faire me permet de concevoir des produits qui ne sont pas seulement <em>fonctionnels</em>, mais aussi <em>visibles et impactants</em>. 
+          Je crois que la technologie n’a de valeur que lorsqu’elle résout de vrais problèmes et aide une marque ou un projet à se démarquer.
+        </p>
+        <p>
+          Curieux, rigoureux et orienté solutions, je mets un point d’honneur à transformer chaque idée en une expérience digitale concrète, moderne et durable.
+        </p>
+      </div>
+    </div>
+
+    <!-- Highlighted Skills -->
+    <div class="row text-center g-4">
+      <div class="col-md-6 animate__animated animate__fadeInUp">
+        <div class="card shadow h-100 border-0">
+          <div class="card-body">
+            <i class="bi bi-code-slash display-4 text-primary mb-3"></i>
+            <h5 class="card-title">Développement</h5>
+            <p class="card-text">Sites modernes, applications web & mobiles, intégration UI/UX, optimisation continue.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6 animate__animated animate__fadeInUp">
+        <div class="card shadow h-100 border-0">
+          <div class="card-body">
+            <i class="bi bi-megaphone display-4 text-success mb-3"></i>
+            <h5 class="card-title">Marketing Digital</h5>
+            <p class="card-text">Community management, stratégie réseaux sociaux, contenus engageants, visuels attractifs.</p>
+          </div>
+        </div>
       </div>
     </div>
   </main>
@@ -42,5 +85,8 @@
   <footer class="bg-primary text-white text-center py-3 mt-5">
     © 2026 Amour Govoetchan - Tous droits réservés
   </footer>
+
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
