--- a/skills/index.html
+++ b/skills/index.html
@@ -4,40 +4,107 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Compétences - Amour Govoetchan</title>
+  <!-- Bootstrap & Animate.css -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-  <link href="/assets/css/style.css" rel="stylesheet">
+  <link href="/portfolio-amour/assets/css/style.css" rel="stylesheet">
 </head>
 <body>
   <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top shadow">
     <div class="container">
-      <a class="navbar-brand" href="/">Amour Govoetchan</a>
+      <a class="navbar-brand fw-bold" href="/portfolio-amour/">Amour Govoetchan</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navMain">
+        <span class="navbar-toggler-icon"></span>
+      </button>
       <div class="collapse navbar-collapse" id="navMain">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item"><a class="nav-link" href="/portfolio-amour/about/">À propos</a></li>
           <li class="nav-item"><a class="nav-link" href="/portfolio-amour/skills/">Compétences</a></li>
           <li class="nav-item"><a class="nav-link" href="/portfolio-amour/cv/">CV</a></li>
-          <li class="nav-item"><a class="nav-link" href="/portfolio-amour/projets/">Projets</a></li>
+          <li class="nav-item"><a class="nav-link" href="/portfolio-amour/projects/">Projets</a></li>
         </ul>
       </div>
     </div>
   </nav>
 
+  <!-- Hero -->
+  <header class="bg-dark text-white text-center py-5 mt-5">
+    <div class="container animate__animated animate__fadeInDown">
+      <h1 class="display-4 fw-bold">Mes Compétences</h1>
+      <p class="lead">Développement Web & Mobile | Marketing Digital | Design</p>
+    </div>
+  </header>
+
   <!-- Content -->
-  <main class="container py-5 mt-5">
-    <h2 class="text-center mb-5 animate__animated animate__fadeInDown">💡 Mes Compétences</h2>
+  <main class="container py-5">
     <div class="row g-4">
+      <!-- Langages -->
       <div class="col-md-4 animate__animated animate__fadeInUp">
-        <div class="card h-100 shadow-sm border-0">
-          <div class="card-body text-center">
+        <div class="card h-100 shadow border-0 text-center">
+          <div class="card-body">
             <i class="bi bi-code-slash display-4 text-primary mb-3"></i>
             <h5 class="card-title">Langages</h5>
             <p class="card-text">C, Dart (Flutter), JavaScript</p>
           </div>
         </div>
       </div>
-      <!-- Ajoute les autres cartes comme dans ton code initial -->
+
+      <!-- Web & Mobile -->
+      <div class="col-md-4 animate__animated animate__fadeInUp">
+        <div class="card h-100 shadow border-0 text-center">
+          <div class="card-body">
+            <i class="bi bi-phone display-4 text-success mb-3"></i>
+            <h5 class="card-title">Web & Mobile</h5>
+            <p class="card-text">HTML5, Blade, CSS3, Bootstrap, PHP, Flutter</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Frameworks & CMS -->
+      <div class="col-md-4 animate__animated animate__fadeInUp">
+        <div class="card h-100 shadow border-0 text-center">
+          <div class="card-body">
+            <i class="bi bi-layers display-4 text-warning mb-3"></i>
+            <h5 class="card-title">Frameworks & CMS</h5>
+            <p class="card-text">Laravel, React.js, Next.js, WordPress</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Bases de données -->
+      <div class="col-md-4 animate__animated animate__fadeInUp">
+        <div class="card h-100 shadow border-0 text-center">
+          <div class="card-body">
+            <i class="bi bi-database display-4 text-danger mb-3"></i>
+            <h5 class="card-title">Bases de données</h5>
+            <p class="card-text">MySQL, SGBD</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Outils & Environnements -->
+      <div class="col-md-4 animate__animated animate__fadeInUp">
+        <div class="card h-100 shadow border-0 text-center">
+          <div class="card-body">
+            <i class="bi bi-tools display-4 text-info mb-3"></i>
+            <h5 class="card-title">Outils & Environnements</h5>
+            <p class="card-text">Laragon, XAMPP, Android Studio, VS Code, Figma</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Graphisme & Bureautique -->
+      <div class="col-md-4 animate__animated animate__fadeInUp">
+        <div class="card h-100 shadow border-0 text-center">
+          <div class="card-body">
+            <i class="bi bi-palette display-4 text-secondary mb-3"></i>
+            <h5 class="card-title">Graphisme & Bureautique</h5>
+            <p class="card-text">Canva, Word, Excel</p>
+          </div>
+        </div>
+      </div>
     </div>
   </main>
 
@@ -45,5 +112,8 @@
   <footer class="bg-primary text-white text-center py-3 mt-5">
     © 2026 Amour Govoetchan - Tous droits réservés
   </footer>
+
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
