--- a/projects/index.html
+++ b/projects/index.html
@@ -4,17 +4,102 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Projets - Amour Govoetchan</title>
+  <!-- Bootstrap & Animate.css -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-  <link href="/assets/css/style.css" rel="stylesheet">
+  <link href="/portfolio-amour/assets/css/style.css" rel="stylesheet">
 </head>
 <body>
   <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top shadow">
     <div class="container">
-      <a class="navbar-brand" href="/">Amour Govoetchan</a>
+      <a class="navbar-brand fw-bold" href="/portfolio-amour/">Amour Govoetchan</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navMain">
+        <span class="navbar-toggler-icon"></span>
+      </button>
       <div class="collapse navbar-collapse" id="navMain">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item"><a class="nav-link" href="/portfolio-amour/about/">À propos</a></li>
           <li class="nav-item"><a class="nav-link" href="/portfolio-amour/skills/">Compétences</a></li>
           <li class="nav-item"><a class="nav-link" href="/portfolio-amour/cv/">CV</a></li>
+          <li class="nav-item"><a class="nav-link" href="/portfolio-amour/projects/">Projets</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <!-- Hero -->
+  <header class="bg-dark text-white text-center py-5 mt-5">
+    <div class="container animate__animated animate__fadeInDown">
+      <h1 class="display-4 fw-bold">Mes Projets</h1>
+      <p class="lead">Quelques réalisations en développement et marketing digital</p>
+    </div>
+  </header>
+
+  <!-- Content -->
+  <main class="container py-5">
+    <div class="row g-4">
+      <!-- Projet 1 -->
+      <div class="col-md-4 animate__animated animate__fadeInUp">
+        <div class="card h-100 shadow border-0">
+          <div class="card-body">
+            <h5 class="card-title">Portfolio Personnel</h5>
+            <p class="card-text">Site statique moderne hébergé sur GitHub Pages, avec animations et design responsive.</p>
+            <span class="badge bg-primary">HTML</span>
+            <span class="badge bg-success">CSS</span>
+            <span class="badge bg-info">Bootstrap</span>
+          </div>
+          <div class="card-footer text-center bg-white">
+            <a href="https://github.com/amour05/portfolio-amour" target="_blank" class="btn btn-outline-dark btn-sm">
+              <i class="bi bi-github"></i> Code source
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <!-- Projet 2 -->
+      <div class="col-md-4 animate__animated animate__fadeInUp">
+        <div class="card h-100 shadow border-0">
+          <div class="card-body">
+            <h5 class="card-title">Application Mobile Flutter</h5>
+            <p class="card-text">Prototype d’application mobile avec authentification, navigation et gestion des états.</p>
+            <span class="badge bg-warning text-dark">Flutter</span>
+            <span class="badge bg-primary">Dart</span>
+          </div>
+          <div class="card-footer text-center bg-white">
+            <a href="https://github.com/amour05" target="_blank" class="btn btn-outline-dark btn-sm">
+              <i class="bi bi-github"></i> Code source
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <!-- Projet 3 -->
+      <div class="col-md-4 animate__animated animate__fadeInUp">
+        <div class="card h-100 shadow border-0">
+          <div class="card-body">
+            <h5 class="card-title">Campagne Marketing Digital</h5>
+            <p class="card-text">Création de contenus visuels et stratégie réseaux sociaux pour améliorer la visibilité d’une marque.</p>
+            <span class="badge bg-danger">Canva</span>
+            <span class="badge bg-success">Social Media</span>
+          </div>
+          <div class="card-footer text-center bg-white">
+            <a href="#" class="btn btn-outline-dark btn-sm">
+              <i class="bi bi-eye"></i> Voir la démo
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </main>
+
+  <!-- Footer -->
+  <footer class="bg-primary text-white text-center py-3 mt-5">
+    © 2026 Amour Govoetchan - Tous droits réservés
+  </footer>
+
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
