--- a/projects/index.html
+++ b/projects/index.html
@@ -33,61 +33,85 @@
   <header class="bg-dark text-white text-center py-5 mt-5">
     <div class="container animate__animated animate__fadeInDown">
       <h1 class="display-4 fw-bold">Mes Projets</h1>
-      <p class="lead">Quelques réalisations en développement et marketing digital</p>
+      <p class="lead">Réalisations académiques et professionnelles en développement et marketing digital</p>
     </div>
   </header>
 
   <!-- Content -->
   <main class="container py-5">
     <div class="row g-4">
-      <!-- Projet 1 -->
-      <div class="col-md-4 animate__animated animate__fadeInUp">
+      <!-- Projet Paiement scolarité -->
+      <div class="col-md-6 animate__animated animate__fadeInUp">
+        <div class="card h-100 shadow border-0">
+          <div class="card-body">
+            <h5 class="card-title">Plateforme de Paiement Scolarité</h5>
+            <p class="card-text">Développement d’une plateforme web pour la gestion et le paiement des frais de scolarité avec API Kkiapay.</p>
+            <span class="badge bg-primary">HTML</span>
+            <span class="badge bg-success">CSS</span>
+            <span class="badge bg-danger">PHP</span>
+            <span class="badge bg-info">API Kkiapay</span>
+          </div>
+        </div>
+      </div>
+
+      <!-- Projet Rendez-vous médicaux -->
+      <div class="col-md-6 animate__animated animate__fadeInUp">
+        <div class="card h-100 shadow border-0">
+          <div class="card-body">
+            <h5 class="card-title">Plateforme Rendez-vous Médicaux</h5>
+            <p class="card-text">Application web pour la prise et la gestion de rendez-vous médicaux avec fonctionnalités de communication.</p>
+            <span class="badge bg-primary">HTML</span>
+            <span class="badge bg-info">Bootstrap</span>
+            <span class="badge bg-danger">PHP</span>
+            <span class="badge bg-dark">Laravel</span>
+          </div>
+        </div>
+      </div>
+
+      <!-- Sites vitrines -->
+      <div class="col-md-6 animate__animated animate__fadeInUp">
+        <div class="card h-100 shadow border-0">
+          <div class="card-body">
+            <h5 class="card-title">Sites Vitrines (Novacom & AGCSPACE)</h5>
+            <p class="card-text">Conception de sites vitrines professionnels pour agences de communication et marketing digital.</p>
+            <span class="badge bg-secondary">HTML</span>
+            <span class="badge bg-success">CSS</span>
+            <span class="badge bg-info">JavaScript</span>
+            <span class="badge bg-dark">WordPress</span>
+          </div>
+        </div>
+      </div>
+
+      <!-- Portfolio personnel -->
+      <div class="col-md-6 animate__animated animate__fadeInUp">
         <div class="card h-100 shadow border-0">
           <div class="card-body">
             <h5 class="card-title">Portfolio Personnel</h5>
-            <p class="card-text">Site statique moderne hébergé sur GitHub Pages, avec animations et design responsive.</p>
+            <p class="card-text">Mise en ligne d’un portfolio moderne présentant compétences, projets et parcours professionnel.</p>
             <span class="badge bg-primary">HTML</span>
             <span class="badge bg-success">CSS</span>
             <span class="badge bg-info">Bootstrap</span>
+            <span class="badge bg-dark">GitHub Pages</span>
           </div>
           <div class="card-footer text-center bg-white">
-            <a href="https://github.com/amour05/portfolio-amour" target="_blank" class="btn btn-outline-dark btn-sm">
-              <i class="bi bi-github"></i> Code source
+            <a href="https://amour05.github.io/portfolio-amour/" target="_blank" class="btn btn-outline-dark btn-sm">
+              <i class="bi bi-eye"></i> Voir en ligne
             </a>
           </div>
         </div>
       </div>
 
-      <!-- Projet 2 -->
-      <div class="col-md-4 animate__animated animate__fadeInUp">
+      <!-- Déploiement & Hébergement -->
+      <div class="col-md-12 animate__animated animate__fadeInUp">
         <div class="card h-100 shadow border-0">
-          <div class="card-body">
-            <h5 class="card-title">Application Mobile Flutter</h5>
-            <p class="card-text">Prototype d’application mobile avec authentification, navigation et gestion des états.</p>
-            <span class="badge bg-warning text-dark">Flutter</span>
-            <span class="badge bg-primary">Dart</span>
-          </div>
-          <div class="card-footer text-center bg-white">
-            <a href="https://github.com/amour05" target="_blank" class="btn btn-outline-dark btn-sm">
-              <i class="bi bi-github"></i> Code source
-            </a>
-          </div>
-        </div>
-      </div>
-
-      <!-- Projet 3 -->
-      <div class="col-md-4 animate__animated animate__fadeInUp">
-        <div class="card h-100 shadow border-0">
-          <div class="card-body">
-            <h5 class="card-title">Campagne Marketing Digital</h5>
-            <p class="card-text">Création de contenus visuels et stratégie réseaux sociaux pour améliorer la visibilité d’une marque.</p>
-            <span class="badge bg-danger">Canva</span>
-            <span class="badge bg-success">Social Media</span>
-          </div>
-          <div class="card-footer text-center bg-white">
-            <a href="#" class="btn btn-outline-dark btn-sm">
-              <i class="bi bi-eye"></i> Voir la démo
-            </a>
+          <div class="card-body text-center">
+            <i class="bi bi-cloud-upload display-4 text-primary mb-3"></i>
+            <h5 class="card-title">Déploiement & Hébergement</h5>
+            <p class="card-text">Maîtrise du déploiement sur plusieurs plateformes : Render, GitHub Pages, Hostinger et o2switch.</p>
+            <span class="badge bg-info">Render</span>
+            <span class="badge bg-dark">GitHub Pages</span>
+            <span class="badge bg-success">Hostinger</span>
+            <span class="badge bg-warning text-dark">o2switch</span>
           </div>
         </div>
       </div>
