--- a/cv/index.html
+++ b/cv/index.html
@@ -29,8 +29,8 @@
     <h1 class="mb-3 animate__animated animate__fadeInDown">📄 Mon CV</h1>
     <p class="lead mb-4 animate__animated animate__fadeInUp">Vous pouvez consulter mon CV en ligne ou le télécharger en PDF.</p>
     <div class="d-flex justify-content-center gap-3 animate__animated animate__zoomIn">
-      <a href="cv_amour.pdf" target="_blank" class="btn btn-primary">Voir le CV</a>
-      <a href="cv_amour.pdf" download class="btn btn-success">Télécharger le CV</a>
+      <a href="Curriculum vitae.pdf" target="_blank" class="btn btn-primary">Voir le CV</a>
+      <a href="Curriculum vitae.pdf" download class="btn btn-success">Télécharger le CV</a>
     </div>
   </main>
 
