--- a/cv/index.html
+++ b/cv/index.html
@@ -4,33 +4,77 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>CV - Amour Govoetchan</title>
+  <!-- Bootstrap & Animate.css -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-  <link href="/assets/css/style.css" rel="stylesheet">
+  <link href="/portfolio-amour/assets/css/style.css" rel="stylesheet">
 </head>
 <body>
   <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top shadow">
     <div class="container">
-      <a class="navbar-brand" href="/">Amour Govoetchan</a>
+      <a class="navbar-brand fw-bold" href="/portfolio-amour/">Amour Govoetchan</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navMain">
+        <span class="navbar-toggler-icon"></span>
+      </button>
       <div class="collapse navbar-collapse" id="navMain">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item"><a class="nav-link" href="/portfolio-amour/about/">À propos</a></li>
           <li class="nav-item"><a class="nav-link" href="/portfolio-amour/skills/">Compétences</a></li>
-          <li class="nav-item"><a class="nav-link" href="/portfolio-amour/cv/">CV</a></li>
-          <li class="nav-item"><a class="nav-link" href="/portfolio-amour/projets/">Projets</a></li>
+          <li class="nav-item"><a class="nav-link active" href="/portfolio-amour/cv/">CV</a></li>
+          <li class="nav-item"><a class="nav-link" href="/portfolio-amour/projects/">Projets</a></li>
         </ul>
       </div>
     </div>
   </nav>
 
+  <!-- Hero -->
+  <header class="bg-dark text-white text-center py-5 mt-5">
+    <div class="container animate__animated animate__fadeInDown">
+      <h1 class="display-4 fw-bold">📄 Mon CV</h1>
+      <p class="lead">Découvrez mon parcours académique et mes qualités</p>
+    </div>
+  </header>
+
   <!-- Content -->
-  <main class="container py-5 mt-5 text-center">
-    <h1 class="mb-3 animate__animated animate__fadeInDown">📄 Mon CV</h1>
-    <p class="lead mb-4 animate__animated animate__fadeInUp">Vous pouvez consulter mon CV en ligne ou le télécharger en PDF.</p>
-    <div class="d-flex justify-content-center gap-3 animate__animated animate__zoomIn">
-      <a href="Curriculum vitae.pdf" target="_blank" class="btn btn-primary">Voir le CV</a>
-      <a href="Curriculum vitae.pdf" download class="btn btn-success">Télécharger le CV</a>
+  <main class="container py-5">
+    <!-- Boutons PDF -->
+    <div class="text-center mb-5 animate__animated animate__zoomIn">
+      <a href="Curriculum vitae.pdf" target="_blank" class="btn btn-primary btn-lg">
+        <i class="bi bi-eye"></i> Voir le CV PDF
+      </a>
+      <a href="Curriculum vitae.pdf" download class="btn btn-success btn-lg">
+        <i class="bi bi-download"></i> Télécharger
+      </a>
+    </div>
+
+    <!-- Formation -->
+    <h2 class="mb-4 text-primary">🎓 Formation</h2>
+    <ul class="list-group mb-5">
+      <li class="list-group-item animate__animated animate__fadeInLeft">
+        <strong>Licence en Systèmes Informatiques et Logiciels</strong> – ISMT Saint Salomon (2021–2025)
+      </li>
+      <li class="list-group-item animate__animated animate__fadeInLeft">
+        <strong>Baccalauréat Série D</strong> – CSP La Merveilleuse (2014–2021)
+      </li>
+    </ul>
+
+    <!-- Qualités -->
+    <h2 class="mb-4 text-primary">🌟 Qualités</h2>
+    <div class="row text-center g-4">
+      <div class="col-md-3"><div class="card shadow border-0"><div class="card-body">Créativité</div></div></div>
+      <div class="col-md-3"><div class="card shadow border-0"><div class="card-body">Esprit d'équipe</div></div></div>
+      <div class="col-md-3"><div class="card shadow border-0"><div class="card-body">Orientation résultats</div></div></div>
+      <div class="col-md-3"><div class="card shadow border-0"><div class="card-body">Capacité d'adaptation</div></div></div>
+    </div>
+
+    <!-- Langues -->
+    <h2 class="mt-5 mb-4 text-primary">🌐 Langues</h2>
+    <div class="row text-center g-4">
+      <div class="col-md-4"><div class="card shadow border-0"><div class="card-body">Français : Courant</div></div></div>
+      <div class="col-md-4"><div class="card shadow border-0"><div class="card-body">Anglais : Intermédiaire</div></div></div>
+      <div class="col-md-4"><div class="card shadow border-0"><div class="card-body">Goun / Fon : Langues maternelles</div></div></div>
     </div>
   </main>
 
@@ -38,5 +82,8 @@
   <footer class="bg-primary text-white text-center py-3 mt-5">
     © 2026 Amour Govoetchan - Tous droits réservés
   </footer>
+
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
