--- a/cv/index.html
+++ b/cv/index.html
@@ -24,6 +24,7 @@
           <li class="nav-item"><a class="nav-link" href="/portfolio-amour/skills/">Compétences</a></li>
           <li class="nav-item"><a class="nav-link active" href="/portfolio-amour/cv/">CV</a></li>
           <li class="nav-item"><a class="nav-link" href="/portfolio-amour/projects/">Projets</a></li>
+          <li class="nav-item"><a class="nav-link" href="/portfolio-amour/contact/">Contact</a></li>
         </ul>
       </div>
     </div>
