--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
           <li class="nav-item"><a class="nav-link" href="/portfolio-amour/skills/">Compétences</a></li>
           <li class="nav-item"><a class="nav-link" href="/portfolio-amour/cv/">CV</a></li>
           <li class="nav-item"><a class="nav-link" href="/portfolio-amour/projets/">Projets</a></li>
+          <li class="nav-item"><a class="nav-link" href="/portfolio-amour/contact/">Contact</a></li>
         </ul>
       </div>
     </div>
